# gameboy-emulator

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.sh
frontend/: index.html  index.js  package-lock.json  package.json  vite.config.js
src/: lib.rs
src/cpu/: arithmetic.rs  mod.rs  operations.rs  register.rs
src/rom/: mod.rs
